--- a/index.html
+++ b/index.html
@@ -10,247 +10,254 @@
       background-color: white;
       font-family: Arial, sans-serif;
     }
-
-    /* ——— CORE PLAY AREA ——— */
     #visual-container {
-      width: 90vw;
-      height: 80vh;
-      max-width: 1400px;
-      max-height: 950px;
-      margin: 80px auto 0 auto;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.07);
-      overflow: hidden;
-      position: relative; /* anchor for #screen overlay */
+      width: 90vw; height: 80vh;
+      max-width: 1400px; max-height: 950px;
+      margin: 80px auto 0;
+      background: white;
+      display: flex; align-items: center; justify-content: center;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+      position: relative; overflow: hidden;
     }
-
-    /* Dynamic overlay that every “screen” is written into */
     #screen {
-      position: absolute;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
+      position: absolute; inset: 0;
+      display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      padding: 40px; box-sizing: border-box;
       background: transparent;
     }
-
-    /* Still‑images & videos used in the REAL trials */
     .media-content {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+      position: absolute; top:50%; left:50%; transform:translate(-50%,-50%);
+      max-width: 100%; max-height: 100%; object-fit: contain;
       display: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
     }
-
-    /* Overlay that sits on TOP of everything (click‑to‑start, etc.) */
-    #overlay {
-      position: fixed;
-      inset: 0;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-    }
-
-    /* Re‑usable UI bits */
     .btn-primary {
-      padding: 20px 48px;
-      font-size: 1.5em;
-      border-radius: 12px;
-      border: none;
-      background: linear-gradient(135deg, #f3e7ff, #d0b3ff);
-      color: #4b2e83;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(75, 46, 131, 0.3);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      padding: 20px 48px; font-size:1.2em;
+      border:none; border-radius:12px;
+      background: linear-gradient(135deg,#f3e7ff,#d0b3ff);
+      color:#4b2e83; font-weight:bold;
+      cursor:pointer; transition:transform .2s;
     }
-    .btn-primary:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 18px rgba(75, 46, 131, 0.4);
-    }
-
-    .tempo-btn,
-    .elevator-option {
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-    .tempo-btn:hover,
-    .elevator-option:hover {
-      transform: scale(1.05);
-    }
+    .btn-primary:hover { transform:scale(1.05); }
+    .tempo-btn, .elevator-option { cursor:pointer; margin:0 8px; }
   </style>
 </head>
 <body>
   <!-- Overlay (hidden initially) -->
   <div id="overlay" style="display:none;"></div>
 
-  <!-- Main visual area -->
+  <!-- Main visual container -->
   <div id="visual-container">
     <div id="screen"></div>
-
     <!-- Hidden assets -->
-    <img class="media-content" id="stillframe1" src="stillframe1.png" />
-    <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
-    <img class="media-content" id="stillframe2" src="stillframe2.png" />
-    <video class="media-content" id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
-    <video class="media-content" id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
-    <video class="media-content" id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
+    <img id="stillframe1" class="media-content" src="stillframe1.png">
+    <img id="gapStillframe" class="media-content" src="gapStillframe.png">
+    <img id="stillframe2" class="media-content" src="stillframe2.png">
+    <video id="video1" class="media-content" playsinline preload="auto" muted src="video1.mp4"></video>
+    <video id="gapVideo" class="media-content" playsinline preload="auto" muted src="gapVideo.mp4"></video>
+    <video id="video2" class="media-content" playsinline preload="auto" muted src="video2.mp4"></video>
   </div>
-
-  <!-- Controls container -->
   <div id="trialControls"></div>
-
-  <!-- Global audio -->
   <audio id="myAudio" hidden preload="auto"></audio>
   <audio id="introNarration" src="intro_narration.mp3" hidden preload="auto"></audio>
 
   <script>
-    // Helper to write into #screen
-    function updateScreen(html, background = null) {
-      const screen = document.getElementById("screen");
-      screen.innerHTML = html;
-      screen.style.background = background || "transparent";
+    // Helper functions
+    function updateScreen(html, bg='transparent'){
+      const s=document.getElementById('screen');
+      s.innerHTML=html; s.style.background=bg;
     }
-
-    // Hide all media-content
-    function hideAllMedia() {
-      document.querySelectorAll('.media-content').forEach(el => {
-        el.style.display = 'none';
-        if (el.tagName === 'VIDEO') {
-          el.pause(); el.currentTime = 0;
-        }
+    function hideAllMedia(){
+      document.querySelectorAll('.media-content').forEach(el=>{
+        el.style.display='none';
+        if(el.tagName==='VIDEO'){ el.pause(); el.currentTime=0; }
       });
     }
 
     // Global state
-    const TRIALS_PER_BLOCK = 2;
-    const BLOCK_ORDER = ['tempo','pitch'];
-    let participantID = null, sessionID = null;
-    let currentBlockIndex = 0, trialCounter = 1;
-    let currentAudioFile = '';
-    let trialStartTime = 0;
+    let participantID='', sessionID='';
+    const TRIALS_PER_BLOCK=2;
+    const BLOCK_ORDER=['tempo','pitch'];
+    let currentBlockIdx=0, practiceIdx=0;
 
-    window.onload = () => {
-      // Prompt ID then start
+    window.onload = ()=>{
       (function askID(){
-        participantID = prompt('Enter Participant ID:');
-        if (!participantID.trim()) return askID();
-        sessionID = `${participantID}_${new Date().toISOString()}`;
+        participantID=prompt('Enter Participant ID:').trim();
+        if(!participantID) return askID();
+        sessionID=participantID+'_'+new Date().toISOString();
         showIntroScreen();
       })();
+      setupRealVisuals();
     };
 
     // 1. INTRO SCREEN
-    function showIntroScreen() {
+    function showIntroScreen(){
       updateScreen(`
-        <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;">
+        <div style="display:flex;align-items:center;justify-content:center;height:100%;">
           <div style="flex:1;display:flex;justify-content:center;">
             <img src="Melody.png" alt="Melody" style="max-width:90%;max-height:80vh;border-radius:20px;" />
           </div>
-          <div style="flex:1;padding:30px;text-align:left;">
+          <div style="flex:1;text-align:left;padding:30px;">
             <p style="font-size:1.5em;line-height:1.6;">
               Hi there!<br>
               My name is Melody, and I love music!<br>
-              Every day, I ride an elevator to get to music class.<br>
+              Every day, I ride an elevator to music class.<br>
               But today, something strange is happening...
             </p>
-            <button id="continueIntro" class="btn-primary" style="font-size:1em;">Click to Play</button>
+            <button id="cont1" class="btn-primary">Click to Play</button>
           </div>
         </div>
       `);
-      document.getElementById('continueIntro').onclick = () => {
-        document.getElementById('continueIntro').disabled = true;
-        const audio = document.getElementById('introNarration');
+      document.getElementById('cont1').onclick=()=>{
+        document.getElementById('cont1').disabled=true;
+        const audio=document.getElementById('introNarration');
         audio.play().catch(()=>{});
-        audio.onended = showIntroVideo;
+        audio.onended=showIntroVideo;
       };
     }
-
     // 2. INTRO VIDEO
-    function showIntroVideo() {
+    function showIntroVideo(){
       updateScreen(`
-        <video id="introVideo" playsinline style="max-width:100%;max-height:100%;background:black;">
+        <video id="introVid" playsinline style="max-width:100%;max-height:100%;background:black;">
           <source src="intro_video.mp4" type="video/mp4">
         </video>
       `,'black');
-      const vid = document.getElementById('introVideo');
-      window.addEventListener('click', async () => {
+      const vid=document.getElementById('introVid');
+      window.addEventListener('click',async()=>{
         await vid.play().catch(()=>{});
-        vid.onended = () => setTimeout(showNarrationScreen, 2000);
-      }, { once:true });
+        vid.onended=()=>setTimeout(showNarrationScreen,2000);
+      },{once:true});
     }
-
     // 3. NARRATION SCREEN
-    function showNarrationScreen() {
+    function showNarrationScreen(){
       updateScreen(`
-        <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;">
+        <div style="display:flex;align-items:center;justify-content:center;height:100%;">
           <div style="flex:1;display:flex;justify-content:center;">
             <img src="Melody.png" alt="Melody" style="max-width:90%;max-height:80vh;border-radius:20px;" />
           </div>
-          <div style="flex:1;padding:30px;text-align:left;">
+          <div style="flex:1;text-align:left;padding:30px;">
             <p style="font-size:1.3em;line-height:1.8;">
               The magical elevator can do all sorts of silly things to the music!<br>
-              Sometimes it makes the music go faster or slower...<br>
-              Other times, the music sounds higher or lower than before!<br><br>
-              Let’s practice together so you know what to listen for!
+              Sometimes it goes faster or slower...<br>
+              Other times it sounds higher or lower!<br><br>
+              Let’s practice so you know what to listen for!
             </p>
-            <button id="playNarration" class="btn-primary">Click to Play</button>
+            <button id="cont2" class="btn-primary">Click to Play</button>
           </div>
         </div>
       `);
-      document.getElementById('playNarration').onclick = () => {
-        const audio = new Audio('intro_narration3.mp3');
-        audio.play().catch(()=>{});
-        audio.onended = () => setTimeout(showFastIntro,1500);
+      document.getElementById('cont2').onclick=()=>{
+        new Audio('intro_narration3.mp3').play().catch(()=>{});
+        setTimeout(showFastIntro,1500);
       };
     }
-
-    // 4. FAST INTRO & VIDEO
-    function showFastIntro() {
-      updateScreen(`
-        <p style="font-size:1.5em;max-width:800px;">
-          First, we’re going to learn about tempo.<br>
-          Tempo is how fast or slow the music goes.<br><br>
-          Ready?<br>
-          Listen to this song and see how it speeds up on the 2nd floor.
-        </p>
-      `);
-      setTimeout(() => playPracticeClip('PT_FAST1.mp4', showSlowIntro), 500);
+    // 4. FAST INTRO & CLIP
+    function showFastIntro(){
+      updateScreen(`<p style="font-size:1.5em;max-width:800px;">
+          First, tempo is how fast or slow music goes.<br>
+          Ready? Listen for speed changes when Melody goes to floor 2.
+        </p>`);
+      setTimeout(()=>playPractice('PT_FAST1.mp4', showSlowIntro),500);
+    }
+    // 5. SLOW INTRO & CLIP
+    function showSlowIntro(){
+      updateScreen(`<p style="font-size:1.5em;max-width:800px;">
+          Whoa—that was fast! Now super sloooow—listen carefully!
+        </p>`);
+      setTimeout(()=>playPractice('PT_SLOW1.mp4', showTempoInstructions),500);
+    }
+    // Play a demo clip then callback
+    function playPractice(src,cb){
+      updateScreen(`<video id="demoVid" playsinline style="max-width:100%;max-height:100%;object-fit:contain;">
+        <source src="${src}" type="video/mp4"></video>`,'black');
+      const v=document.getElementById('demoVid'); v.play().catch(()=>{}); v.onended=cb;
+    }
+    // 6. INSTR BEFORE PRACTICE RESP
+    function showTempoInstructions(){
+      updateScreen(`<p>Now practice: tell me if it's faster, slower, or the same.</p>
+        <button id="cont3" class="btn-primary">Begin Practice</button>`);
+      document.getElementById('cont3').onclick=runTempoPractice;
+    }
+    // 7. TEMPO PRACTICE WITH RESPONSE
+    function runTempoPractice(){
+      const trials=[{f:'PT_FAST2.mp4',c:'fast'},{f:'PT_SLOW2.mp4',c:'slow'}]; let i=0;
+      function next(){ if(i>=trials.length) return showRealTempoIntro();
+        playTrialWithResponse(trials[i++],next);
+      }
+      next();
+    }
+    function playTrialWithResponse(trial,cb){
+      updateScreen(`<video id="tp" playsinline style="max-width:100%;max-height:100%;object-fit:contain;">
+        <source src="${trial.f}" type="video/mp4"></video>`,'black');
+      const v=document.getElementById('tp'); v.play().catch(()=>{});
+      v.onended=()=>showResponse(trial.c,cb);
+    }
+    function showResponse(correct,cb){
+      updateScreen(`<h2>How did it sound?</h2>
+        <button data-choice="fast" class="tempo-btn btn-primary">Fast</button>
+        <button data-choice="slow" class="tempo-btn btn-primary">Slow</button>
+        <button data-choice="same" class="tempo-btn btn-primary">Same</button>
+        <div id="fb"></div>`);
+      document.querySelectorAll('.tempo-btn').forEach(b=>b.onclick=()=>{
+        const c=b.getAttribute('data-choice'), fb=document.getElementById('fb');
+        if(c===correct){ fb.innerHTML='<p style="color:green;">Correct!</p>'; setTimeout(cb,800); }
+        else fb.innerHTML='<p style="color:red;">Try again.</p>';
+      });
+    }
+    // 8. REAL TEMPO INTRO
+    function showRealTempoIntro(){
+      updateScreen(`<p>Great! Now real tempo trials begin.</p>
+        <button id="cont4" class="btn-primary">Start Real Tempo</button>`);
+      document.getElementById('cont4').onclick=startRealTempo;
+    }
+    // 9. REAL TEMPO TRIALS
+    function startRealTempo(){
+      hideAllMedia(); updateScreen(`<h2>Real Tempo Trial ${1} of ${TRIALS_PER_BLOCK}</h2>`);
+      // TODO: call playTrial() from your real-trials logic
     }
 
-    // 5. SLOW INTRO & VIDEO
-    function showSlowIntro() {
-      updateScreen(`
-        <p style="font-size:1.5em;max-width:800px;">
-          Whoa! That was a fast ride!<br><br>
-          Now Melody is going super sloooow. Listen carefully!
-        </p>
-      `);
-      setTimeout(() => playPracticeClip('PT_SLOW1.mp4', showTempoInstructions), 500);
+    // 10. PITCH DEMO INTRO
+    function showPitchDemoIntro(){
+      updateScreen(`<p>Next: pitch changes demo.</p>
+        <button id="cont5" class="btn-primary">Begin Pitch Demo</button>`);
+      document.getElementById('cont5').onclick=()=>{
+        playPractice('PT_HIGH1.mp4', ()=>playPractice('PT_LOW1.mp4', showPitchPracticeIntro));
+      };
+    }
+    // 11. PITCH PRACTICE INTRO
+    function showPitchPracticeIntro(){
+      updateScreen(`<p>Practice pitch: tell me high, low, or same.</p>
+        <button id="cont6" class="btn-primary">Begin Pitch Practice</button>`);
+      document.getElementById('cont6').onclick=runPitchPractice;
+    }
+    // 12. PITCH PRACTICE
+    function runPitchPractice(){
+      const trials=[{f:'PT_HIGH2.mp4',c:'fast'},{f:'PT_LOW2.mp4',c:'slow'}]; let i=0;
+      function next(){ if(i>=trials.length) return showRealPitchIntro();
+        playTrialWithResponse(trials[i++],next);
+      }
+      next();
+    }
+    // 13. REAL PITCH INTRO
+    function showRealPitchIntro(){
+      updateScreen(`<p>Now real pitch trials begin.</p>
+        <button id="cont7" class="btn-primary">Start Real Pitch</button>`);
+      document.getElementById('cont7').onclick=startRealPitch;
+    }
+    // 14. REAL PITCH TRIALS
+    function startRealPitch(){
+      hideAllMedia(); updateScreen(`<h2>Real Pitch Trial ${1} of ${TRIALS_PER_BLOCK}</h2>`);
+      // TODO: call pitch-trial logic
     }
 
-    // play a practice clip, then callback
-    function playPracticeClip(src, cb) {
-      updateScreen(`<video id="clip" playsinline style="max-width:100%;max-height:100%;object-fit:contain;"><source src="${src}" type="video/mp4"></video>`,'black');
-      const vid = document.getElementById('clip');
-      vid.play().catch(()=>{});
-      vid.onended = cb;
+    // Initialize hidden real-trial visuals
+    function setupRealVisuals(){
+      visuals=[]; ['stillframe1','video1','gapStillframe','gapVideo','video2','stillframe2']
+        .forEach(id=>visuals.push({el:document.getElementById(id),start:0,end:0}));
     }
-
-    // 6. TEMP
-
-``` (code truncated for brevity; full update applied)```
+  </script>
+</body>
+</html>
 
 
 
