--- a/index.html
+++ b/index.html
@@ -394,31 +394,30 @@ function playFastVideo() {
       nextPractice();
     }
 
-// 1) playTempoPracticeVideo: unmute, contain, then hand off to response screen
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   const container = document.getElementById("visual-container");
   container.innerHTML = "";
 
   const wrapper = document.createElement("div");
-  wrapper.style.cssText = 
+  wrapper.style.cssText = `
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%; height: 100%;
     background: #cce0dd;
     position: relative;
-  ;
+  `;
 
   const video = document.createElement("video");
   video.src = videoFile;
   video.autoplay = true;
   video.playsInline = true;
   video.muted = false;            // ← unmute so you hear the clip
-  video.style.cssText = 
+  video.style.cssText = `
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-  ;
+  `;
 
   wrapper.appendChild(video);
   container.appendChild(wrapper);
@@ -432,7 +431,7 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
 function showTempoResponseScreen(correctAnswer, callback) {
   const wrapper = document.querySelector("#visual-container > div");
   const overlay = document.createElement("div");
-  overlay.style.cssText = 
+  overlay.style.cssText = `
     position: absolute;
     inset: 0;
     display: flex;
@@ -440,8 +439,8 @@ function showTempoResponseScreen(correctAnswer, callback) {
     align-items: center;
     justify-content: center;
     background: white;            /* ← solid white */
-  ;
-  overlay.innerHTML = 
+  `;
+  overlay.innerHTML = `
     <h1 style="color:#4b2e83;">How did the music sound?</h1>
     <div style="display:flex; gap:40px; margin-top:20px;">
       <button data-choice="fast" class="tempo-btn">Fast</button>
@@ -451,7 +450,7 @@ function showTempoResponseScreen(correctAnswer, callback) {
     <div id="feedback" style="margin-top:20px; font-size:1.2em;"></div>
     <audio id="correctSound" src="correct_feedback.mp3"></audio>
     <audio id="wrongSound"   src="wrong_feedback.mp3"></audio>
-  ;
+  `;
   wrapper.appendChild(overlay);
 
   const fb = overlay.querySelector("#feedback");
@@ -496,14 +495,14 @@ function runTempoPractice() {
 
 // 4) showRealTrialsIntro: white instruction screen, then kick off real trials
 function showRealTrialsIntro() {
-  updateScreen(
+  updateScreen(`
     <div style="padding:40px; text-align:center;">
       <h1>Awesome—you’re ready for the real tempo trials!</h1>
       <p style="font-size:1.3em; margin-top:20px;">
         Next, you’ll hear a series of clips. After each one, choose which elevator Melody rode.
       </p>
     </div>
-  , "white");
+  `, "white");
 
   setTimeout(() => {
     // clear and start your actual tempo block
