--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
       background:transparent;
     }
 
-.media-content,
-#visual-container video{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:none;
-  position:absolute;
-  top:0;left:0;
-}
+ /* Still‑images & videos used in the REAL trials */
+    .media-content {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
 
     /* Global rule so *any* video / img you inject later also scales correctly */
     #visual-container video,
