--- a/index.html
+++ b/index.html
@@ -339,51 +339,47 @@ window.onload=async()=>{
       }, 1500);
     }
 
-  function runTempoPractice(){
+function runTempoPractice(){
   const practiceTrials=[
     {video:"PT_FAST2.mp4",correct:"fast"},
     {video:"PT_SLOW2.mp4",correct:"slow"}
   ];
   let i=0;
+
   function nextPractice(){
-    if(i>=practiceTrials.length){showRealTrialsIntro();return;}
-    const trial=practiceTrials[i++]; playTempoPracticeVideo(trial.video,trial.correct,nextPractice);
+    if(i >= practiceTrials.length){
+      showRealTrialsIntro();
+      return;
+    }
+    const trial = practiceTrials[i++];
+    playTempoPracticeVideo(trial.video, trial.correct, nextPractice);
   }
+
   nextPractice();
 }
 
-  function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
-  const container = document.getElementById("visual-container");
-  container.innerHTML = "";
+function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
+  updateScreen(`
+    <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:#cce0dd;">
+      <video id="practiceVideo" playsinline muted autoplay style="width:100%; height:100%; object-fit:contain; background:#cce0dd;">
+        <source src="${videoFile}" type="video/mp4">
+      </video>
+    </div>
+  `, "#cce0dd");
 
-  // wrapper to center & contain
-  const wrapper = document.createElement("div");
-  wrapper.style.cssText = `
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%; height: 100%;
-    background: #cce0dd;
-  `;
-
-  const video = document.createElement("video");
-  video.src = videoFile;
-  video.autoplay = true;
-  video.playsInline = true;
-  video.muted = true; 
-  video.style.cssText = `
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  `;
-
-  wrapper.appendChild(video);
-  container.appendChild(wrapper);
+  const video = document.getElementById("practiceVideo");
 
   video.onended = () => {
     showTempoResponseScreen(correctAnswer, callback);
   };
+
+  // Handle autoplay restrictions or load failure
+  video.play().catch(err => {
+    console.warn("Autoplay issue or play failed:", err);
+    showTempoResponseScreen(correctAnswer, callback);
+  });
 }
+
 
 function showTempoResponseScreen(correctAnswer, callback) {
   const container = document.getElementById("visual-container");
