--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ function runTempoPractice(){
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:#cce0dd;">
-      <video id="practiceVideo" playsinline muted autoplay style="width:100%; height:100%; object-fit:contain; background:#cce0dd;">
+      <video id="practiceVideo" playsinline autoplay style="width:100%; height:100%; object-fit:contain; background:#cce0dd;">
         <source src="${videoFile}" type="video/mp4">
       </video>
     </div>
